<resources>
    <string name="app_name">MyMovies</string>
    <string name="poster_of_movie">Постер к фильму</string>
    <string name="most_rated">Наиболее рейтинговые</string>
    <string name="most_popular">Самые популярные</string>
    <string name="title">Название:</string>
    <string name="original_title">Оригинальное название:</string>
    <string name="rating">Рейтинг:</string>
    <string name="release_date">Дата выхода:</string>
    <string name="description">Описание:</string>
    <string name="added_to_favorite">Добавлено в избранное</string>
    <string name="deleted_from_favorite">Удалено из избранного</string>
    <string name="main_menu">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="start_trailer">Запустить трейлер</string>
</resources>